src/styles/NavBar.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.main_container_navbar_pro {
  width: 100vw;
  min-height: 40px;
  height: 15vh;
  grid-template-columns: 3rem 0.8fr 2fr 1rem;
  font-family: "Happy Monkey", cursive;
  display: flex;
  align-items: center;
  justify-content: center;

  position: fixed;
  transition: width 0.4s;
  -webkit-transition: width 0.4s;
  -moz-transition: width 0.4s;

  z-index: 99;
  font-family: Poppins, sans-serif;
}

.img_wrapper_nav{
  height: 100%;
  width: 100%;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav_img_navbar_pro {
  position: absolute;
  width: 80%;
  z-index: 2;
  margin-top: 3vh;
}

.nav_logo_img_pro {
  position: absolute;
  z-index: 3;
  transform: rotateZ(-20deg);
  width: 16vw;
  left: 8vw;
  margin-top: 1%;
  min-width: 150px;
}

.sidebar_logo{
  display: none;
  z-index: 99;
  transform: rotateZ(-20deg);
  width: 25vw;
  min-width: 150px;
  top: -5vh;
    left: -6vw;
  position: fixed;
}

.nav_img_paper_pro {
  position: absolute;
  width: 100%;
  top: 0;
  height: 10vh;
  object-fit: cover;
}

.navItem1_navbar_pro {
  position: absolute;
  width: 65%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  text-decoration: none;
  z-index: 4;
  margin-top: 1vh;
}

.navItem1_navbar_pro a {
  text-decoration: none;
  color: #b3b3b3db;
  cursor: pointer;
}

.navItem1_navbar_pro a:hover {
  color: white;
  transition: all ease 0.75s;
}

.active {
  color: black;
}

.social_media_navbar_pro {
  display: none;
  position: fixed;
  right: 2vw;
  top: 2vh;
  transition: all ease 0.1s;
  justify-content: center;
  align-items: center;
}

.social_media_navbar_pro img {
  height: 10vh;
  cursor: pointer;
  transform: rotate(90deg);
}

.sidebar_heading_nav {
  position: absolute;
  color: #f1e6e6;
  top: 3.5vh;
  z-index: 2;
  font-size: 27px;
  font-family: "Dancing Script", cursive;
  display: none;
}

@media (max-width: 1150px) {
  .main_container_navbar_pro {
    font-size: 14px;
  }

  .navItem1_navbar_pro {
    margin-top: 1.5vh;
  }
}

@media (max-width: 998px) {
  .main_container_navbar_pro {
    font-size: 11.5px;
  }

  .navItem1_navbar_pro {
    margin-top: 1.75vh;
  }

  .nav_logo_img_pro{
    left: 7vw;
  }
}

@media (max-width: 850px) {
  .main_container_navbar_pro {
    padding: 0;
    width: 0;
    height: 0;
    font-size: 16px;
    background-color: black;
    opacity: 0;
    justify-content: space-around;
  }

  .sidebar_logo{
    display: block;
    top: -30px;
    left: -25px
  }

  .nav_img_navbar_pro {
    top: 0;
    width: 90%;
    object-fit: cover;
    height: 9.5vh;
    min-height: 40px;
    width: auto;
  }

  .sidebar_heading_nav {
    display: block;
  }

  .nav_img_paper_pro {
    display: none;
  }

  .sidebar {
    height: 100vh;
    width: 60vw;
    opacity: 1;
    z-index: 102;
    right: 0;
  }

  .active_navbar {
    right: 55vw;
    transition: all ease 0.4s;
  }

  .nav_logo_img_pro{
    left: 200vw;
  }

  .navItem1_navbar_pro {
    flex-direction: column;
    height: 55%;
    width: 100%;
    justify-self: unset;
    margin-bottom: 60%;
    margin-top: 30%;
  }

  .sidebar a {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    color: #b3b3b3;
  }

  .social_media_navbar_pro {
    display: flex;
    z-index: 101;
  }

  .social_media_navbar_pro i{
    position: absolute;
    margin-left: 10px;
    color: #ffffffd4;
    scale: 2;
  }
}

@media (max-width: 650px) {
  .navItem1_navbar_pro {
    margin-top: 25%;
  }
}

@media (max-width: 450px) {
  .navItem1_navbar_pro {
    margin-top: 10%;
  }
}

